# ros_human_follower

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
human_follower/: follow_controller.py  person_detector.py
human_follower_ws/: README.md  nano
human_follower_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
human_follower_ws/install/human_follower/lib/human_follower/: depth_tracker  follower_main  gesture_detector  obstacle_avoider  person_detector  robot_controller  smart_navigator
human_follower_ws/install/human_follower/share/human_follower/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
human_follower_ws/install/human_follower/share/human_follower/config/: params.yaml
human_follower_ws/install/human_follower/share/human_follower/launch/: follower_launch.py
human_follower_ws/src/human_follower/: package.xml  setup.py
human_follower_ws/src/human_follower/config/: params.yaml
human_follower_ws/src/human_follower/human_follower/: __init__.py  depth_tracker_node.py  gesture_detector_node.py  person_detector_node.py
launch/: follower.launch.py
